[package]
name = "ccpath"
version = "0.1.0"
authors = ["joshmeranda <joshmeranda@gmail.com>"]
edition = "2018"
description = "Rename files to conform to a given naming convention"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#doctet = true

[dependencies]
clap = "2.33"
convert_case = "0.4.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
tempfile = "3.2.0"